# RustODESolver

./: .gitignore  Cargo.toml  README.md
numerical_methods_lib/: Cargo.toml
numerical_methods_lib/src/: explicit_euler_method.rs  heun_method.rs  implicit_euler_method.rs  lib.rs  ode_solver.rs  runge_kutta4.rs
numerical_methods_lib/src/ode_solvers/: explicit_euler_method.rs  heun_method.rs  implicit_euler_method.rs  mod.rs  ode_solver.rs  runge_kutta4.rs
numerical_methods_lib/src/root_finders/: mod.rs  newton_method.rs  newton_raphson_method.rs
project_bin/: Cargo.toml
project_bin/src/: main.rs
src/: main.rs
tests/: Cargo.toml  explicit_euler_test.rs  heun_test.rs  implicit_euler_tests.rs  runge_kutta4_test.rs
