[package]
name = "ode_solver"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sen"]

[dependencies]
numerical_methods_lib ={ path = "numerical_methods_lib"}    # needed for the tests to work

# Check https://rust-classes.com/chapter_4_3
[workspace]
members = [
    "numerical_methods_lib",
    "project_bin",
    "tests",
]
resolver = "2"